Revision history for Types-SQL

{{$NEXT}}
  [Other Changes]
  - Added more QA tests for developers.

  - Added META.json to the distribution.

  - Fixed type in test descriptions.

v0.0.2    2016-01-13 14:35:01+00:00 Europe/London
  [Enhancements]
  - Column information will be extracted from parent types when it is
    unavailable from the current type [GitHub #2].

    This allows one to declare a type based on existing types.

  [Other Changes]
  - Show the name of the type when returning an error for unsupported types.

v0.0.1    2016-01-13 10:59:10+00:00 Europe/London
  - First prototype published on GitHub.